<package>
  <name>motoman_sda20d_with_grippers_support</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for robotiq_gripper_3_finger_adaptive</p>
    <p>This package contains configuration data, 3D models and launch files
for robotiq_gripper_3_finger_adaptive robot</p>
  </description>
  <author>me</author>
  <maintainer email="sinaivoz@gmail.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>gazebo</run_depend>
  <export>
    <architecture_independent />
  </export>
</package>
